deployments/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: "static-ip"
    networking.gke.io/managed-certificates: "gke-ingress-cert"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: backend-api.endpoints.cs599-cloud.cloud.goog
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-api-service
            port:
              number: 3000
